# rest-service

./: Dockerfile  README.md  main.py  pyproject.toml  requrements.txt
database/: db.py
database/dals/: __init__.py  headman_annotations_dal.py  headman_changes_dal.py  headman_schedule_dal.py  personal_annotations_dal.py  personal_changes_dal.py  personal_schedule_dal.py  shared_schedule_dal.py
utils/: constants.py  logger.py  requests.py
