[tool.poetry]
name = "Rest-service"
version = "1"
description = ""
authors = ["darttusin <ivanchepikov444@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.2"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
databases = {extras = ["postgresql"], version = "^0.5.5"}
asyncpg = "^0.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
