[tool.poetry]
name = "Rest-service"
version = "1"
description = ""
authors = ["darttusin <ivanchepikov444@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.2"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
asyncpg = "^0.25.0"
uvloop = "^0.16.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
